# Data-Structures-And-Algorithms

./: README.md
Hash Tables - Chaining/: 100.data  1000.data  10000.data  25000.data  500.data  5000.data  50000.data  Hash Tables - Chaining.cbp  Hash Tables - Chaining.depend  Hash Tables - Chaining.layout  files.h  hashTable.c  hashTable.h  input.txt  io.c  io.h  list.c  list.h  main.c  table.txt
Hash Tables - Open Addressing/: 1000.data  500.data  5000.data  Hash Tables - Open Addressing.cbp  Hash Tables - Open Addressing.depend  Hash Tables - Open Addressing.layout  hashTable.c  hashTable.h  input.txt  io.c  io.h  main.c  table
assigment2.1/: CMakeLists.txt  doublyLinkedLists.c  doublyLinkedLists.h  main.c  parsing.c  parsing.h
assignment1Extra/: lists.c  lists.h  toDo.c  toDo.h
assignment2.2-Queues/: CMakeLists.txt  main.c  queue.c  queue.h
assignment3.1/: CMakeLists.txt  list.c  list.h  main.c  tree.c  tree.h
assignment3Extra/: CMakeLists.txt  main.c  queue.c  queue.h  tree.c  tree.h
assignment4.1/: CMakeLists.txt  main.c  tree.c  tree.h
assignment8/: CMakeLists.txt  IOFunctions.c  IOFunctions.h  heap.c  heap.h  input.txt  main.c  output.txt  sortingAlgorithms.c  sortingAlgorithms.h
assignments5&6/: CMakeLists.txt  edge.h  graph.h  graphAlgorithms.c  graphAlgorithms.h  graphRepresentation.c  graphRepresentation.h  graphTraversals.c  graphTraversals.h  heap.c  heap.h  input.txt  list.c  list.h  longestPath.c  longestPath.h  main.c  node.c  node.h  output.txt  priorityQueue.c  priorityQueue.h  queue.c  queue.h  stack.c  stack.h
