cmake_minimum_required(VERSION 3.15)
project(assignment5 C)

set(CMAKE_C_STANDARD 99)

add_executable(assignment5 main.c graphRepresentation.c graphRepresentation.h graphTraversals.c graphTraversals.h queue.c queue.h node.c node.h graph.h list.c list.h longestPath.c longestPath.h graphAlgorithms.c graphAlgorithms.h edge.h stack.c stack.h priorityQueue.h priorityQueue.c heap.c heap.h)